--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,8 @@ h6 {
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: 2000px auto;
-  padding-bottom: 200px;
+  padding-bottom: 100px;
+  min-height: 600px;
   margin-bottom: -150px;
 }
 
@@ -44,10 +45,6 @@ h6 {
   min-height: 64px;
 }
 
-.header__logo {
-  text-align: left;
-}
-
 .header__logo img {
   color: #ffffff;
   width: 200px;
@@ -65,10 +62,6 @@ h6 {
   margin-right: 20px;
 }
 
-.header__disappearing-pricing-link {
-  margin-right: 20px;
-}
-
 .content-wrapper {
   max-width: 960px;
   margin: 0 auto;
@@ -76,38 +69,26 @@ h6 {
   position: relative;
 }
 
-@media (max-width: 767px) {
+@media only screen and (min-width: 768px) {
   .header {
     margin-bottom: 0;
   }
-}
-
-@media (max-width: 600px) {
+  __text-link.-last {
+    margin-right: 0;
+  }
+  __get-started {
+    display: none;
+  }
   .content-wrapper {
     text-align: center;
   }
-}
-
-@media (max-width: 767px) {
-  .header__text-link.-last {
-    margin-right: 0;
-  }
-}
-
-@media (max-width: 415px) {
-  .header__disappearing-pricing-link {
-    display: none;
-  }
-}
-
-@media (max-width: 767px) {
   .header__disappearing-pricing-link.-last {
     margin-right: 0;
   }
 }
 
-@media (max-width: 767px) {
-  .header__get-started {
+@media only screen and (min-width: 460px) {
+  .header__disappearing-pricing-link {
     display: none;
   }
 }
